cabal-version:  3.4
build-type:     Simple

name:           wag2020
version:        0.1.0.0
--description:    Please see the README on GitHub at <https://github.com/githubuser/wag2020#readme>
--homepage:       https://github.com/githubuser/wag2020#readme
--bug-reports:    https://github.com/githubuser/wag2020/issues
--author:         Ward Wheeler
--maintainer:     wheeler@amnh.org
--copyright:      2020 Ward Wheeler
--license:        BSD3
--license-file:   LICENSE

-- Need to add vector == 0.12.0.1 for ghc 8.4.4
-- -optl-static -optl-pthread for static

Source-Repository-Package head
  type:     git
  location: git@github.com:wardwheeler/PhyGraph.git
  subdir:   pkg/PhyloLib

executable wag2020

  main-is: wag2020.hs

  ghc-options:  -Wall
                -Wincomplete-patterns
                -threaded 
                -O2
                -with-rtsopts=-N
                -static
                -XBangPatterns
                -rtsopts
                -- for weeder
 --               -fwrite-ide-info
                -- for static linux
                -- -optl-static -optl-pthread
                -- -fllvm
                

-- delete these for OSX for linux static binaries
--   cc-options: -static
--  ld-options: -static -pthread

--From matrices package (so 0 based)

  build-depends:  base >=4.10
                , containers >=0.5
                -- , PhyloLib
                , perfect-vector-shuffle
                , vector 
                , matrices 
                , parallel
                , split
                , MissingH
                , parsec
                , deepseq
                , process
                , random
                , random-shuffle
                , graphviz
                , fgl
                , text
                , logfloat
                , monad-parallel
                , sort
                , array
                , bv
                , hashable
                , time
                , bv-little
                

                

  default-language: Haskell2010

  hs-source-dirs: . ../../PhyloLibs 


  other-modules: DistanceMethods
                , Types 
                , Utilities 
                , Wagner
                , ParseCommands
                , GraphFormatUtilities
                , GeneralUtilities
                , ParallelUtilities
                , SymMatrix 
                , Cyclic
                