cabal-version:  2.2
build-type:     Simple

name:           wag2020
version:        0.1.0.0
--description:    Please see the README on GitHub at <https://github.com/githubuser/wag2020#readme>
--homepage:       https://github.com/githubuser/wag2020#readme
--bug-reports:    https://github.com/githubuser/wag2020/issues
--author:         Ward Wheeler
--maintainer:     wheeler@amnh.org
--copyright:      2020 Ward Wheeler
--license:        BSD3
--license-file:   LICENSE

-- Need to add vector == 0.12.0.1 for ghc 8.4.4
-- -optl-static -optl-pthread for static


executable wag2020

  main-is: wag2020.hs

  if !os(darwin) 
      ghc-options:
        -Wall
        -Wincomplete-patterns
        -threaded 
        -feager-blackholing
        -with-rtsopts=-N
        -O2
        -rtsopts
        -static
        -fllvm
    else 
      ghc-options:
        -Wall
        -Wincomplete-patterns
        -threaded 
        -feager-blackholing
        -with-rtsopts=-N
        -O2
        -rtsopts
        -static
        -- problems getting llvm to function in OSX (can't find opt)
        -- -fllvm


    if !os(darwin) 
      cc-options: 
        -static
    else 
      cc-options:

    if !os(darwin) 
      ld-options: 
        -static -pthread
    else 
      ld-options: 
    

--From matrices package (so 0 based)

  build-depends:  base >=4.10
                , containers >=0.6
                , perfect-vector-shuffle
                , vector 
                , matrices 
                , parallel
                , split
                , MissingH >= 1.4.3
                , parsec
                , deepseq
                , process
                , random
                , random-shuffle
                , graphviz
                , fgl
                , text
                , logfloat
                , monad-parallel
                , sort
                , array
                , bv
                , hashable
                , time

                
  default-extensions: BangPatterns                

  default-language: Haskell2010

  hs-source-dirs: . ../../PhyloLibs 


  other-modules:  SymMatrix
                , DistanceMethods 
                , Types 
                , Utilities 
                , Wagner
                , ParseCommands
                , GraphFormatUtilities
                , GeneralUtilities
                , ParallelUtilities
                , Cyclic
                
