cabal-version:  3.8
build-type:     Simple

name:           wag2020
version:        0.1.0.0
--description:    Please see the README on GitHub at <https://github.com/githubuser/wag2020#readme>
--homepage:       https://github.com/githubuser/wag2020#readme
--bug-reports:    https://github.com/githubuser/wag2020/issues
--author:         Ward Wheeler
--maintainer:     wheeler@amnh.org
--copyright:      2020 Ward Wheeler
--license:        BSD3
--license-file:   LICENSE


-- at command line "--enable-executable-static" for static binaries
-- -optl-static -optl-pthread for static

Source-Repository-Package head
  type:     git
  location: git@github.com:wardwheeler/PhyGraph.git
  subdir:   pkg/PhyloLib

executable wag2020

  Main-is: wag2020.hs

  GHC-Options:
    -Wall
    -Wincomplete-patterns
    -threaded 
    -feager-blackholing
    -O2
    -rtsopts
    -static
    -fexcess-precision
    -fexpose-all-unfoldings
    -flate-specialise
    -fmax-simplifier-iterations=16
    -foptimal-applicative-do
    -fspec-constr-count=8
    -fspec-constr-keen
    -fspecialize-aggressively
    -fstatic-argument-transformation
    "-with-rtsopts=-N -A64m -AL128M -H1024m -n4m -qa -qm"
    
  If !os(darwin)
    GHC-Options:
      -fllvm
  else
    GHC-Options:
     -- -fllvm  
     -- -optl-static -optl-pthread 
    

--From matrices package (so 0 based)

  build-depends:  base >=4.10
                , containers >=0.6
                , perfect-vector-shuffle
                , vector 
                , matrices 
                , parallel
                , split
                , MissingH >= 1.4.3
                , parsec
                , deepseq
                , process
                , random
                , random-shuffle
                , graphviz
                , fgl
                , text
                , logfloat
                , monad-parallel
                , sort
                , array
                , bv
                , hashable
                , time
                , bv-little
                

                
  default-extensions: BangPatterns                

  default-language: Haskell2010

  hs-source-dirs: . ../../PhyloLibs 


  other-modules: DistanceMethods
                , Types 
                , Utilities 
                , Wagner
                , ParseCommands
                , GraphFormatUtilities
                , GeneralUtilities
                , ParallelUtilities
                , SymMatrix 
                , Cyclic
                
